# crowdify_GW

./: .dockerignore  .editorconfig  .env  .env.bak  .env.bak2  .env.bak3  .env.bak4  .env.example  .gitignore  ANALISIS_RIESGOS_MIGRACION.md  CHANGELOG.md  COMO_OBTENER_TOKEN.md  CONFIGURAR_NGROK.md  CONFIGURAR_WEBHOOK.md  CONFIGURAR_WEBHOOK_PASO_A_PASO.md  DEBUG_WEBHOOK.md  DEBUG_WEBHOOK_PASO_A_PASO.md  DEPLOY.md  Dockerfile  FLUJO_COMPRA_ANONIMA.md  GUIA_INICIO.md  INICIAR_NGROK.md  Makefile  NGROK_EXPLICACION.md  OBTENER_TOKEN_JWT.md  README.md  REPORTE_ENDPOINTS.md  SISTEMA_LOGIN.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  env.production.example  env.template  frontend-api-client-example.ts  main.py  pyproject.toml  requirements.txt  test_mercadopago.py  test_preference_items.py  update_ngrok_url.sh
.github/: copilot-instructions.md
app/: main.py
backend/: .gitignore  Dockerfile  FIX_DATABASE.md  FRONTEND_PROMPT.md  README.md  SETUP.md  UPDATE_DATABASE_URL.md  create_env.py  docker-compose.yml  requirements.txt
docs/: API_DOCUMENTATION.md  CREATE_ENV.txt  EMAIL_INTEGRATION.md  EMAIL_SERVICES_COMPARISON.md  FRONTEND_FIX_POLLING.md  FRONTEND_INTEGRATION_GUIDE.md  HU_PRODUCTOS_NINOS.md  HU_PRODUCTOS_NINOS_RESUMEN.md  MAILHOG_SETUP.md  MERCADOPAGO_CURL_TEST_RESULTS.md  MERCADOPAGO_ISSUE_REPORT.md  MERCADOPAGO_LOCALHOST_EXPLANATION.md  MERCADOPAGO_PREFERENCIAS.md  MERCADOPAGO_RESUMEN.md  MERCADOPAGO_SANDBOX_CLARIFICATION.md  MERCADOPAGO_SETUP.md  PAYKU_FLUJO_COMPLETO.md  PAYKU_NGROK_SETUP.md  PAYKU_TARJETAS_PRUEBA.md  POETRY_MIGRATION.md  README.md  RESEND_FIX.md  RESEND_QUICK_START.md  openapi.json  (+9 more)
pdfsvc/: Dockerfile  pyproject.toml  requirements.txt
pdfsvc/app/: main.py
(+99 files in other folders)
