[tool.poetry]
name = "pdfsvc"
version = "1.0.0"
description = "Servicio de generación de PDFs y QR codes"
authors = ["Crowdify Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
qrcode = "^7.4.2"
reportlab = "^4.0.9"
Pillow = "^10.4.0"
pydantic = "^2.5.0"
minio = "^7.2.9"
Jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


